bindings/fsharp/Proven.fs


    // --- SafeNetwork (3) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IPv4Result proven_network_parse_ipv4(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_network_ipv4_is_private(IPv4Address addr)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_network_ipv4_is_loopback(IPv4Address addr)

    // --- SafeHeader (6) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_header_has_crlf(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_header_is_valid_name(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_header_is_dangerous(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_header_render(byte[] namePtr, unativeint nameLen, byte[] valuePtr, unativeint valueLen)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_header_build_csp(byte[] directivesJson, unativeint jsonLen)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_header_build_hsts(int64 maxAge, bool includeSubdomains, bool preload)

    // --- SafeCookie (6) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_cookie_has_injection(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_cookie_validate_name(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_cookie_validate_value(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IntResult proven_cookie_get_prefix(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_cookie_build_set_cookie(byte[] namePtr, unativeint nameLen, byte[] valuePtr, unativeint valueLen, CookieAttributes attrs)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_cookie_build_delete(byte[] namePtr, unativeint nameLen)

    // --- SafeContentType (5) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_content_type_parse(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_content_type_free(nativeint result)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_content_type_can_sniff_dangerous(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_content_type_render(byte[] typePtr, unativeint typeLen, byte[] subtypePtr, unativeint subtypeLen, byte[] suffixPtr, unativeint suffixLen, int charset, bool hasCharset)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_content_type_is_json(byte[] subtypePtr, unativeint subtypeLen, byte[] suffixPtr, unativeint suffixLen)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_content_type_is_xml(byte[] subtypePtr, unativeint subtypeLen, byte[] suffixPtr, unativeint suffixLen)

    // --- SafeUUID (5) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern UUIDResult proven_uuid_v4()

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_uuid_to_string(ProvenUUID uuid)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern UUIDResult proven_uuid_parse(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_uuid_is_nil(ProvenUUID uuid)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern byte proven_uuid_version(ProvenUUID uuid)

    // --- SafeJson (2) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_json_is_valid(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_json_get_type(byte[] ptr, unativeint len)

    // --- SafeDateTime (4) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern DateTimeResult proven_datetime_parse(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_datetime_format_iso8601(ProvenDateTime dt)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_datetime_is_leap_year(int32 year)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern byte proven_datetime_days_in_month(int32 year, byte month)

    // --- SafeFloat (5) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern FloatResult proven_float_div(float a, float b)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_float_is_finite(float x)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_float_is_nan(float x)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern FloatResult proven_float_sqrt(float x)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern FloatResult proven_float_ln(float x)

    // --- SafePassword (2) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern PasswordResult proven_password_validate(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_password_is_common(byte[] ptr, unativeint len)

    // --- SafeHex (3) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_hex_encode(byte[] ptr, unativeint len, bool uppercase)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern HexDecodeResult proven_hex_decode(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_hex_free(nativeint result)

    // --- SafeCurrency (2) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern CurrencyResult proven_currency_parse(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_currency_format(int64 amountMinor, byte[] code, byte decimalPlaces)

    // --- SafePhone (2) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern PhoneResult proven_phone_parse(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_phone_format_e164(uint16 countryCode, uint64 nationalNumber)

    // --- SafeVersion (3) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern VersionResult proven_version_parse(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_version_compare(SemanticVersion a, SemanticVersion b)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_version_free(nativeint version)

    // --- SafeGeo (3) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern GeoResult proven_geo_validate(float lat, float lon)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern FloatResult proven_geo_distance(GeoCoordinate a, GeoCoordinate b)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_geo_in_bounds(GeoCoordinate coord, float minLat, float maxLat, float minLon, float maxLon)

    // --- SafeChecksum (2) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IntResult proven_checksum_crc32(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_checksum_verify_crc32(byte[] ptr, unativeint len, uint32 expected)

    // --- SafeProbability (4) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern float proven_probability_create(float value)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern float proven_probability_and(float a, float b)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern float proven_probability_or_exclusive(float a, float b)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern float proven_probability_not(float p)

    // --- SafeCalculator (1) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern FloatResult proven_calculator_eval(byte[] ptr, unativeint len)

    // --- SafeBuffer (4) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_buffer_create(unativeint capacity)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_buffer_append(nativeint buffer, byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_buffer_get(nativeint buffer, nativeint& outPtr, unativeint& outLen)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_buffer_free(nativeint buffer)

    // --- SafeRateLimiter (3) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_rate_limiter_create(float capacity, float refillRate)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_rate_limiter_try_acquire(nativeint limiter, float tokens)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_rate_limiter_free(nativeint limiter)

    // --- SafeCircuitBreaker (6) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_circuit_breaker_create(uint32 failureThreshold, uint32 successThreshold, int64 timeoutMs)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_circuit_breaker_allow(nativeint cb)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_circuit_breaker_success(nativeint cb)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_circuit_breaker_failure(nativeint cb)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_circuit_breaker_state(nativeint cb)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_circuit_breaker_free(nativeint cb)

    // --- SafeRetry (2) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern uint64 proven_retry_delay(RetryConfig config, uint32 attempt)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_retry_should_retry(RetryConfig config, uint32 attempt)

    // --- SafeMonotonic (3) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_monotonic_create(uint64 initial, uint64 maxValue)
